--- a/kubernetes/cluster/apps/secrets/secret-sync/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/secret-sync/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
     image:
       repository: registry.local.tam.land/secret-sync/sync
       tag: latest
-    environment:
+    env:
       VAULT_ENABLED: true
       VAULT_ADDRESS: http://hashicorp-vault.secrets.svc.cluster.local:8200
       VAULT_ROLE: secret-sync-role
