--- a/kubernetes/cluster/apps/small-indie-bot/kafka/kustomization.yaml
+++ b/kubernetes/cluster/apps/small-indie-bot/kafka/kustomization.yaml
@@ -2,4 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
+  - kafka-persistence.yaml
+  - kafka-service.yaml
+  - kafka-statefulset.yaml
