--- a/kubernetes/cluster/apps/small-indie-bot/kafka/kafka-statefulset.yaml
+++ b/kubernetes/cluster/apps/small-indie-bot/kafka/kafka-statefulset.yaml
@@ -38,16 +38,16 @@ spec:
             - name: DEFAULT_MIN_INSYNC_REPLICAS
               value: '1'
           volumeMounts:
-            - name: data
+            - name: kafka-nfs-pvc
               mountPath: /mnt/kafka
   volumeClaimTemplates:
     - metadata:
-      name: kafka-nfs-pvc
-      namespace: small-indie-bot
-    spec:
-      storageClassName: kafka-nfs-manual
-      accessModes:
-        - ReadWriteMany
-      resources:
-        requests:
-          storage: 20Gi
+        name: kafka-nfs-pvc
+        namespace: small-indie-bot
+      spec:
+        storageClassName: kafka-nfs-manual
+        accessModes:
+          - ReadWriteMany
+        resources:
+          requests:
+            storage: 20Gi
