--- a/kubernetes/cluster/apps/small-indie-bot/kafka/kafka-persistence.yaml
+++ b/kubernetes/cluster/apps/small-indie-bot/kafka/kafka-persistence.yaml
@@ -1,7 +1,35 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-nfs-pv
+  name: kafka-nfs-pv-0
+spec:
+  storageClassName: kafka-nfs-manual
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: nfs.local.tam.land
+    path: "/nfs-share/kafka"
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: kafka-nfs-pv-1
+spec:
+  storageClassName: kafka-nfs-manual
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: nfs.local.tam.land
+    path: "/nfs-share/kafka"
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: kafka-nfs-pv-2
 spec:
   storageClassName: kafka-nfs-manual
   capacity:
