--- a/kubernetes/cluster/flux-bootstrap/git-repos/druid-operator.yaml
+++ b/kubernetes/cluster/flux-bootstrap/git-repos/druid-operator.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
   name: druid-operator
-  namespace: flux-bootstrap
+  namespace: flux-system
 spec:
   interval: 5m
   url: https://github.com/datainfrahq/druid-operator.git
