--- a/kubernetes/cluster/apps/logging/logstash/pipelines-secret.yaml
+++ b/kubernetes/cluster/apps/logging/logstash/pipelines-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: logstash-pipelines
+  namespace: logging
 stringData:
   pipelines.yml: |-
     - pipeline.syslog: main
