Added missing service definition

--- a/kubernetes/cluster/apps/other-webapps/stirlingpdf/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/stirlingpdf/helm-release.yaml
@@ -43,6 +43,8 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
         tls:
           - secretName: tamland-tls
             hosts:
