--- a/kubernetes/cluster/apps/logging/logstash/pipelines-secret.yaml
+++ b/kubernetes/cluster/apps/logging/logstash/pipelines-secret.yaml
@@ -12,6 +12,9 @@ stringData:
             type => "pfsense-syslog"
             port => 5140
           }
+          udp {
+            type => "cisco-catalyst"
+            port => 5141
         }
     - pipeline.id: tags
       config.string: |
@@ -19,6 +22,11 @@ stringData:
           if [type] == "pfsense-syslog" {
             mutate {
               add_tag => ["PFSense", "Ready"]
+            }
+          }
+          if [type] == "cisco-catalyst-syslog" {
+            mutate {
+              add_tag => ["CiscoCatalyst", "Ready"]
             }
           }
         }
@@ -96,9 +104,18 @@ stringData:
                 user => "elastic"
                 password => ""
                 ssl => true
-                #cacert => "/usr/share/logstash/config/ca.crt"
                 ssl_certificate_verification => false
                 index => "logstash-pfsense-%{+YYYY.MM.dd}"
+            }
+          }
+          if [type] == "cisco-catalyst-syslog" {
+            elasticsearch {
+                hosts => [ "elasticsearch-es-http.logging.svc.cluster.local" ]
+                user => "elastic"
+                password => ""
+                ssl => true
+                ssl_certificate_verification => false
+                index => "logstash-cisco-catalyst-%{+YYYY.MM.dd}"
             }
           }
         }
