--- a/kubernetes/cluster/apps/games/factorio/kustomization.yaml
+++ b/kubernetes/cluster/apps/games/factorio/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - factorio-configuration-secret.yaml
   - helm-release.yaml
-  - pv.yaml
+  - persistent-volume.yaml
