--- a/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
@@ -11,7 +11,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -19,24 +19,38 @@ spec:
       interval: 5m
   values:
     controllers:
-      main:
+      app:
         enabled: true
         containers:
-          main:
+          app:
             image:
               repository: ghostfolio/ghostfolio
-              tag: 2.62.0
+              tag: 2.63.1
             envFrom:
               - secret: ghostfolio-configuration
+      redis:
+        enabled: true
+        containers:
+          redis:
+            image:
+              repository: redis
+              tag: 7.2.4
     serviceAccount:
       create: true
       name: ghostfolio-app
     service:
-      main:
+      app:
         enabled: true
+        controller: app
         ports:
           http:
             port: 3333
+      redis:
+        enabled: true
+        controller: redis
+        ports:
+          http:
+            port: 6379
     ingress:
       main:
         enabled: true
@@ -46,7 +60,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  name: app
         tls:
           - secretName: local-tamland-tls
             hosts:
