--- a/kubernetes/cluster/apps/other-webapps/sylvtextthing/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/sylvtextthing/helm-release.yaml
@@ -1,4 +1,4 @@
----
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.0.2/charts/library/common/values.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -11,7 +11,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -19,10 +19,10 @@ spec:
       interval: 5m
   values:
     controllers:
-      main:
+      app:
         enabled: true
         containers:
-          main:
+          app:
             image:
               repository: registry.local.tam.land/wow/sylvtextthing
               tag: latest
@@ -30,13 +30,15 @@ spec:
       create: true
       name: sylvtextthing-app
     service:
-      main:
+      app:
         enabled: true
+        controller: app
+        primary: true
         ports:
           http:
             port: 80
     ingress:
-      main:
+      app:
         enabled: true
         hosts:
           - host: sylv.tam.land
@@ -44,7 +46,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
         tls:
           - secretName: tamland-tls
             hosts:
@@ -54,7 +56,9 @@ spec:
         enabled: true
         type: nfs
         server: nfs.local.tam.land
-        path: /nfs-share/sylvtextthing
-        globalMounts:
-          - path: /app/database
-            readonly: false
+        path: /nfs-share/other-webapps/sylvtextthing/app
+        advancedMounts:
+          app:
+            app:
+              - path: /app/database
+                readOnly: false
