--- a/kubernetes/cluster/apps/admin/mailrise/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/mailrise/helm-release.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -11,7 +10,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -28,10 +27,10 @@ spec:
           {{ .Data.data.config }}
           {{- end -}}
     controllers:
-      main:
+      app:
         enabled: true
         containers:
-          main:
+          app:
             image:
               repository: yoryan/mailrise
               tag: latest
@@ -42,20 +41,17 @@ spec:
       create: true
       name: mailrise-app
     service:
-      main:
+      app:
         enabled: true
+        controller: app
+        primary: true
         type: LoadBalancer
         annotations:
           metallb.universe.tf/loadBalancerIPs: 10.200.12.1
           metallb.universe.tf/allow-shared-ip: "misc-sharing"
         ports:
-          http:
-            enabled: false
           smtp:
             enabled: true
             primary: true
             port: 8025
             protocol: TCP
-    persistence:
-      config:
-        enabled: false
