--- a/kubernetes/cluster/apps/smart-home/mosquitto/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/mosquitto/helm-release.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -10,23 +9,34 @@ spec:
     force: true
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: mosquitto
-      version: 4.8.2
+      chart: app-template
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home
+        name: bjw-s
         namespace: flux-system
       interval: 5m
   values:
-    image:
-      repository: eclipse-mosquitto
-      tag: 2.0.18
-    service:
-      main:
+    controllers:
+      app:
         enabled: true
+        containers:
+          app:
+            image: 
+              repository: eclipse-mosquitto
+              tag: 2.0.18
+    service:
+      app:
+        enabled: true
+        controller: app
+        primary: true
+        type: LoadBalancer
         annotations:
           metallb.universe.tf/loadBalancerIPs: 10.200.12.1
           metallb.universe.tf/allow-shared-ip: "misc-sharing"
-        type: LoadBalancer
+        ports:
+          mqtt:
+            enabled: true
+            port: 1883
+            protocol: TCP
 
