--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: hass
+  name: homeassistant
   namespace: smart-home
 spec:
   interval: 5m
@@ -10,42 +10,82 @@ spec:
     force: true
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: home-assistant
-      version: 13.4.2
+      chart: app-template
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home
+        name: bjw-s
         namespace: flux-system
       interval: 5m
   values:
-    deployment:
+    controllers:
+      app:
+        enabled: true
+        containers:
+          app:
+            image:
+              repository: homeassistant/home-assistant
+              tag: "2024.3"
+            env:
+              TZ: America/Toronto
+      postgres:
+        enabled: true
+        containers:
+          postgres:
+            image:
+              repository: postgres
+              tag: 16.2
+            envFrom: 
+              - secret: homeassistant-configuration
     serviceAccount:
-      name: hass-app
+      name: homeassistant-app
       create: true
-    image:
-      name: homeassistant/home-assistant
-      tag: "2024.1"
-    env:
-      TZ: America/Toronto
+    service:
+      app:
+        enabled: true
+        controller: app
+        primary: true
+        ports:
+          http:
+            port: 8123
+      postgres:
+        enabled: true
+        controller: postgres
+        ports:
+          http:
+            port: 5432
     ingress:
-      main:
+      app:
         enabled: true
         hosts:
           - host: "hass.tam.land"
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  identifier: app
         tls:
           - secretName: tamland-tls
             hosts:
                 - hass.tam.land
     persistence:
-      config:
+      appconfig:
         enabled: true
-        type: custom
-        volumeSpec:
-          nfs:
-            server: nfs.local.tam.land
-            path: /nfs-share/hass
-        mountPath: /config
+        type: nfs
+        server: nfs.local.tam.land
+        path: /nfs-share/smart-home/home-assistant/app
+        advancedMounts:
+          app:
+            app:
+              - path: /config
+                readOnly: false
+      pgdata:
+        enabled: true
+        type: nfs
+        server: nfs.local.tam.land
+        path: /nfs-share/smart-home/home-assistant/postgres
+        advancedMounts:
+          postgres:
+            postgres:
+              - path: /var/lib/postgresql/data
+                readOnly: false
