--- a/kubernetes/cluster/apps/smart-home/esphome/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/esphome/helm-release.yaml
@@ -24,7 +24,9 @@ spec:
           app:
             image:
               repository: esphome/esphome
-              tag: "2024.2.2"
+              tag: "2024.3.0"
+            env:
+              ESPHOME_DASHBOARD_USE_PING: true
     serviceAccount:
       create: true
       name: esphome-app
