--- a/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
@@ -11,7 +11,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -21,51 +21,57 @@ spec:
     serviceAccount:
       create: true
       name: netboot-app
-    image:
-      repository: linuxserver/netbootxyz
-      tag: 0.7.1
-    env:
-      TZ: America/Toronto
+    controllers:
+      app:
+        containers:
+          app:
+            image:
+              repository: linuxserver/netbootxyz
+              tag: latest
+            env:
+              TZ: America/Toronto
     service:
-      main:
+      app:
         enabled: true
+        controller: app
+        primary: true
         ports:
           http:
             port: 3000
       assets:
         enabled: true
+        controller: app
+        primary: false
+        type: LoadBalancer
         annotations:
           metallb.universe.tf/loadBalancerIPs: 10.200.12.1
           metallb.universe.tf/allow-shared-ip: "misc-sharing"
-        primary: false
-        type: LoadBalancer
         ports:
-          http-assets:
-            enabled: true
-            primary: false
-            protocol: HTTP
+          http:
             port: 80
       tftp:
         enabled: true
+        controller: app
+        primary: false
+        type: LoadBalancer
         annotations:
           metallb.universe.tf/loadBalancerIPs: 10.200.12.1
           metallb.universe.tf/allow-shared-ip: "misc-sharing"
-        primary: false
-        type: LoadBalancer
         ports:
-          udp-tftp:
+          tftp:
             enabled: true
-            primary: false
             protocol: UDP
             port: 69
     ingress:
-      main:
+      app:
         enabled: true
         hosts:
           - host: netboot.local.tam.land
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  identifier: app
         tls:
           - secretName: local-tamland-tls
             hosts:
@@ -74,17 +80,21 @@ spec:
     persistence:
       config:
         enabled: true
-        type: custom
-        mountPath: /config
-        volumeSpec:
-          nfs:
-            server: nfs.local.tam.land
-            path: /nfs-share/netbootxyz/config
+        type: nfs
+        server: nfs.local.tam.land
+        path: /nfs-share/admin/netbootxyz/config
+        advancedMounts:
+          app:
+            app:
+              - path: /config
+                readOnly: false
       assets:
         enabled: true
-        type: custom
-        mountPath: /assets
-        volumeSpec:
-          nfs:
-            server: nfs.local.tam.land
-            path: /nfs-share/netbootxyz/assets
+        type: nfs
+        server: nfs.local.tam.land
+        path: /nfs-share/admin/netbootxyz/assets
+        advancedMounts:
+          app:
+            app:
+              - path: /assets
+                readOnly: false
