Set external traffic policy for netboot

--- a/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
@@ -54,6 +54,7 @@ spec:
         controller: app
         primary: false
         type: NodePort
+        externalTrafficPolicy: Local
         ports:
           tftp:
             enabled: true
