--- a/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/netboot/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
         containers:
           app:
             image:
-              repository: linuxserver/netbootxyz
+              repository: ghcr.io/netbootxyz/netbootxyz
               tag: latest
             env:
               TZ: America/Toronto
