--- a/kubernetes/cluster/apps/other-webapps/lubelog/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/lubelog/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
     service:
       main:
         enabled: true
+        controller: main
         ports:
           http:
             port: 8080
