--- a/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
@@ -29,7 +29,8 @@ spec:
         enabled: true
     ports:
       web:
-        redirectTo: websecure
+        redirectTo:
+          port: websecure
       websecure:
         tls:
           enabled: true
